@@ -529,6 +529,7 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
     - src/pulsemanager.cpp: cast the return value of realloc () to char*, as
       GCC doesn't seem to like reassigning the pointer otherwise.
     - src/unix_stdint.h: use same hack to import ssize_t into std namespace.
+    - src/onmainwindow.{cpp,h}: remove left-over parec references and code.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
